# matrix-rust-sdk-fuzz-target

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
dendrite_test_env/: docker-compose.yml  run.sh
dendrite_test_env/config/: dendrite.yaml  matrix_key.pem  server.crt  server.key
in/get_room/: 1  2  3  4  5  6
in/main/: url4
in/registration/: 1  2  4
src/: get_room.rs  main.rs  register_user.rs
