[package]
name = "matrix-rust-sdk-fuzz-target"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl =  { version = "0.10.0", features = ["reset_lazy_static"] }
matrix-sdk = "0.3.0"
url = "2.2.2"

[patch.crates-io]
lazy_static = { git = "https://github.com/rust-fuzz/resettable-lazy-static.rs" }